// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBlock should render block with error status 1`] = `
.c2 {
  width: 500px;
  height: 40px;
  position: absolute;
  right: 20px;
  top: 14px;
}

.c3 {
  width: 425px;
  height: 19px;
  position: absolute;
  left: 0;
  top: 0;
  text-align: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Lota Grotesque',Roboto,'Helvetica Neue',Arial,Helvetica,sans-serif;
}

.c4 {
  width: 400px;
  height: 19px;
  position: absolute;
  left: 0;
  bottom: 0;
  text-align: left;
  color: #1c2936;
  font-family: 'Lota Grotesque',Roboto,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-size: 16px;
  line-height: 18px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  width: 28px;
  height: 28px;
  background-size: cover;
  position: absolute;
  right: 2px;
  top: 8px;
}

.c0 {
  height: 70px;
  width: 610px;
  background-color: white;
  margin: 6px 2px 16px 2px;
  padding: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 1px 0 rgba(93,118,143,0.89),0 1px 5px 0 rgba(127,149,170,0.5);
  position: relative;
  border-radius: 5px;
}

.c0:last-child {
  margin-bottom: 10px;
}

.c1 {
  background-size: cover;
  position: absolute;
  left: 17px;
  top: 2px;
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      fill="#dd8187"
      height="66px"
      width="56px"
    >
      pdf.svg
    </svg>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      001.pdf
    </div>
    <div
      className="c4"
    >
      is not registered on komgo or has been tampered with
    </div>
    <div
      className="c5"
    >
      <svg
        height="28px"
        width="28px"
      >
        error.svg
      </svg>
    </div>
  </div>
</li>
`;

exports[`StatusBlock should render block with pending status 1`] = `
.c4.c4.c4 {
  width: 500px;
  height: 5px;
  position: absolute;
  left: 0px;
  bottom: 0;
  color: #1c2936;
  margin-bottom: 0;
}

.c2 {
  width: 500px;
  height: 40px;
  position: absolute;
  right: 20px;
  top: 14px;
}

.c3 {
  width: 329px;
  height: 24px;
  position: absolute;
  left: 5px;
  top: 5px;
  color: #1c2936;
  font-family: 'Lota Grotesque',Roboto,'Helvetica Neue',Arial,Helvetica,sans-serif;
  text-transform: uppercase;
  font-size: 12px;
  line-height: 24px;
  text-align: left;
}

.c0 {
  height: 70px;
  width: 610px;
  background-color: white;
  margin: 6px 2px 16px 2px;
  padding: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 1px 0 rgba(93,118,143,0.89),0 1px 5px 0 rgba(127,149,170,0.5);
  position: relative;
  border-radius: 5px;
}

.c0:last-child {
  margin-bottom: 10px;
}

.c1 {
  background-size: cover;
  position: absolute;
  left: 17px;
  top: 2px;
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      fill="#c0cfde"
      height="66px"
      width="56px"
    >
      pdf.svg
    </svg>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
       VERIFYING YOUR DOCUMENT . . . 
    </div>
    <div
      className="ui teal tiny progress c4"
      data-percent={0}
      id={0}
    >
      <div
        className="bar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`StatusBlock should render block with success status 1`] = `
.c2 {
  width: 500px;
  height: 40px;
  position: absolute;
  right: 20px;
  top: 14px;
}

.c3 {
  width: 425px;
  height: 19px;
  position: absolute;
  left: 0;
  top: 0;
  text-align: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Lota Grotesque',Roboto,'Helvetica Neue',Arial,Helvetica,sans-serif;
}

.c4 {
  width: 425px;
  height: 19px;
  position: absolute;
  left: 0;
  bottom: 0;
  text-align: left;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Lota Grotesque',Roboto,'Helvetica Neue',Arial,Helvetica,sans-serif;
  font-size: 16px;
  line-height: 18px;
}

.c5 {
  width: 28px;
  height: 28px;
  background-size: cover;
  position: absolute;
  right: 2px;
  top: 8px;
}

.c0 {
  height: 70px;
  width: 610px;
  background-color: white;
  margin: 6px 2px 16px 2px;
  padding: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 1px 0 rgba(93,118,143,0.89),0 1px 5px 0 rgba(127,149,170,0.5);
  position: relative;
  border-radius: 5px;
}

.c0:last-child {
  margin-bottom: 10px;
}

.c1 {
  background-size: cover;
  position: absolute;
  left: 17px;
  top: 2px;
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      fill="#25aab3"
      height="66px"
      width="56px"
    >
      pdf.svg
    </svg>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      001.pdf
    </div>
    <div
      className="c4"
      title="registered on 2019/08/12 at 02:11 PM by Company 001"
    >
      registered on 2019/08/12 at 02:11 PM by Company 001
    </div>
    <div
      className="c5"
    >
      <svg
        height="28px"
        width="28px"
      >
        success.svg
      </svg>
    </div>
  </div>
</li>
`;
